# RateWatch

./: .gitignore  LICENSE  README.md  pyproject.toml
ratewatch/: check.py  cli.py  config.py  providers.py
