[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratewatch"
version = "0.1.0"
description = "Check rate-limit status for LLM API providers before you hit a limit."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ratewatch" }]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.7",
    "platformdirs>=4.2",
    "tomli-w>=1.0",
]

[project.scripts]
ratewatch = "ratewatch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ratewatch"]
